Import code legibility (revert this in case of any issue)

--- a/src/pages/ManageEntity.scss
+++ b/src/pages/ManageEntity.scss
@@ -1,4 +1,4 @@
-.app-show-entity {
+.app-manage-entity {
 
   .app-controls {
     @apply flex items-center text-gray-700 overflow-x-hidden;
